# memoria

./: .gitignore  README.md  antexport.py  chatbot.py  cli.py  context.py  db.py  graph.py  hypersync.md  ipld.py  mcp.json  mcp_host.py  memoria.ipldsch  memoria.ipldsch.json  memoria.py  minimal_server.py  models.py  pyproject.toml  pyrightconfig.json  requirements.txt  schema.sql  server.py  subject.py  test.sql  util.py
docs/: hypersync.ipldsch  memoria.ipldsch
examples/: python_chat.py
ipld/: __init__.py  car.py  cid.py  dagcbor.py  dagjson.py  ipld.py  multibase.py  multicodec.py  multihash.py  varint.py
schemas/: anthropic.json
src/: chat.py  cid.py  cli.py  client.py  config.py  db.py  graph.py  immutable.py  ipfs.py  memoria.py  memory.py  models.py  multicodec.py  multihash.py  repo.py  sampling.py  schema.sql  test.py  util.py  varint.py
src/emulator/: README.md  _common.py  client.py  client_emu.py  server.py  server_emu.py
src/exports/: anthropic.py  anthropic.sql  openai.py  schema.py
src/ipld/: README.md  __init__.py  _common.py  car.py  cid.py  dag.py  dagcbor.py  dagjson.py  ipfs.py  ipld.py  multiaddr.py  multibase.py  multicodec.py  multihash.py  varint.py
src/memoria/: __init__.py  config.py  db.py  graph.py  hypersync.py  interpreter.py  ipfs.py  irc.py  memoria.py  memory.py  multiaddr.py  multibase.py  repo.py  schema.sql  subject.py  test.py  util.py
src/memoria.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/prompts/: __init__.py  annotate.md  chat.md  query.md
src/server/: __init__.py  (+9 more)
(+67 files in other folders)
