[project]
name = "memoria"
description = "Asynchronous memory-oriented cognitive architecture."
version = "0.0.1"
requires-python = ">= 3.8"
dependencies = [
    "cbor2==5.6.5",
    "deepmerge==2.0",
    "fastapi==0.116.1",
    "fastembed-gpu==0.7.1",
    "fastmcp==2.10.5",
    "idna==3.10",
    "mcp==1.11.0",
    "netaddr==1.3.0",
    "numpy==2.3.1",
    "protobuf==6.31.1",
    "pydantic==2.11.7",
    "pydantic-ai==0.4.2",
    "sqlite-vec==0.1.6",
    "tqdm==4.67.1",
    "uuid-extension==0.1.0",
    "uvicorn==0.35.0",
    "cachetools==5.5.2"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
cli = "memoria.cli:main"
interpreter = "memoria.interpreter.server:main"
subject = "memoria.subject.server:main"